--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 html, body {
   background: var(--color-bg);
   color: var(--color-fg);
-  font-family: "Fira Code";
+  font-family: "Departure Mono";
   height: 100%;
   width: 100%;
   margin: 0;
